--- a/Lab1-JPA-Netbeans/nbproject/project.properties
+++ b/Lab1-JPA-Netbeans/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=true
 javadoc.windowtitle=
-main.class=
+main.class=pl.polsl.gabrys.arkadiusz.Controller
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
