--- a/Lab1-JPA-Netbeans/nbproject/project.properties
+++ b/Lab1-JPA-Netbeans/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Lab1-JPA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-cli-1.3.1.jar=lib\\commons-cli-1.3.1.jar
 file.reference.eclipselink.jar=lib\\eclipselink.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.mysql-5.6.jar=lib\\mysql-5.6.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.mysql-5.6.jar}:\
     ${file.reference.eclipselink.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.commons-cli-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
